--- a/content/otcc2025/2025-03-13_start.md
+++ b/content/otcc2025/2025-03-13_start.md
@@ -1,20 +1,24 @@
 +++
 title = "OTCC"
-description = "Der Startschuss fällt"
+description = "Get ready for OTCC 2025"
 +++
 
-Nachdem die Idee bereits längere Zeit im Raum stand war es am 13. Oktober 2025 soweit:
-Die ersten, konkreten Planungen für ein Community-Event für Open-Transport haben begonnen.
+After discussing the idea several time, the first concrete plans for a community event were started on March 13, 2025.
 
-Die Mitwirkenden zeigten sich hoch motiviert und es wurden schnell ersten Ideen zum Aufbau und Ablauf zusammengetragen.
-Ebenso wurde ein erster Namens- und Terminvorschlag gemacht:
+The participants were highly motivated and we quickly gathered ideas regarding structure and program.
+After some discussions the event will go by _Open Transport Community Conference_, for now.
+The currently suggested date will be:
 
-**17. – 18. Oktober 2025**
+**October 17 – 18, 2025**
 
-Da das Event für Personen gedacht ist, welche sich in der Freizeit oder beruflich mit Open-Transport befassen, wollen wir möglichst allen die Chance geben den Termin wahrzunehmen, wodurch die Veranstaltung am Freitag und Samstag stattfinden soll.
-Weiterhin soll ds Event bewusst nicht dem typischen Konferenz-Format entsprechen.
-Stattdessen wollen wir verstärkt Möglichkeiten geben, um sich untereinander auszutauschen und gemeinsam Lösungen zu erarbeiten.
-Ein Rahmenprogramm ist angedacht, ebenso die Möglichkeit, dass Interessierte ihre Projekte vorgestellt können.
+As the event is intended for people working on open transport professionally and voluntary, we intended a date everyone could participate at.
+Therefore the event will be on Friday and Saturday.
+We don't intend for a typical conference program, instead the focus should be on learning and exchange.
+There also will be some social program and possibilities to present interesting projects.
 
-Wir freuen uns über Feedback und Anregungen über die bekannten Kanäle:
-_TODO Link einfügen_
+We are looking for feedback and suggestions.
+Contact us at:
+
+* [#opentransport:matrix.org](https://matrix.to/#/#opentransport:matrix.org)
+* [GitHub](https://github.com/MichaelKutzner/otcc)
+
