Replace previously used short form

--- a/content/event2025/2025-03-13_start.md
+++ b/content/event2025/2025-03-13_start.md
@@ -1,6 +1,6 @@
 +++
-title = "OTCC"
-description = "Get ready for OTCC 2025"
+title = "Open Transport Community Conference"
+description = "Get ready for Open Transport Community Conference 2025"
 +++
 
 After discussing the idea several time, the first concrete plans for a community event were started on March 13, 2025.
