Update links to Matrix channel

--- a/content/event2025/2025-03-13_start.de.md
+++ b/content/event2025/2025-03-13_start.de.md
@@ -18,5 +18,5 @@ Ein Rahmenprogramm ist angedacht, ebenso die Möglichkeit, dass Interessierte ih
 
 Wir freuen uns über Feedback und Anregungen über die bekannten Kanäle:
 
-* [#opentransport:matrix.org](https://matrix.to/#/#opentransport:matrix.org)
+* [#open-transport:matrix.org](https://matrix.to/#/#open-transport:matrix.org)
 * [GitHub](https://github.com/MichaelKutzner/otcc)
