--- a/content/event2025/2025-03-13_start.md
+++ b/content/event2025/2025-03-13_start.md
@@ -19,6 +19,6 @@ There also will be some social program and possibilities to present interesting 
 We are looking for feedback and suggestions.
 Contact us at:
 
-* [#opentransport:matrix.org](https://matrix.to/#/#opentransport:matrix.org)
+* [#open-transport:matrix.org](https://matrix.to/#/#open-transport:matrix.org)
 * [GitHub](https://github.com/MichaelKutzner/otcc)
 
